src/test/deca/codegen/valid/cast_float_int.deca
// Description:
//   Cast d'une expression float->int
//
// Resultats:
//    ima_output: 2323
//

{
    float a = 2323.34;
    int b = (int) (a);
    print(b);
}
